Implementació de versión N
Implementado el interprete de funciones, modificado el parser para tomar más valores con vistas a depuración y liberación de memoria.

Modificadas las estructuras para evitar problemas de borrados de memoria por tener los destructores después de sus ejecuciones en otros destructores.

Agregadas funciones adicionales para evitar problemas derivados de los LOCALES, y trabajar así siempre con un contexto por defecto. (Ejemplo, los doubles siempre irán con '.' no con ',', sea cual sea el idioma establecido.)

--- a/MDOX.vcxproj
+++ b/MDOX.vcxproj
@@ -112,6 +112,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Funciones.cpp" />
+    <ClCompile Include="Interprete.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Comandos.cpp" />
     <ClCompile Include="Tokenizer.cpp" />
@@ -122,6 +123,7 @@
     <ClInclude Include="Comandos.h" />
     <ClInclude Include="Estructuras.h" />
     <ClInclude Include="Funciones.h" />
+    <ClInclude Include="Interprete.h" />
     <ClInclude Include="Tokenizer.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Tester.h" />
