--- a/MDOX.vcxproj.filters
+++ b/MDOX.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Parser.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Interprete.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Comandos.h">
@@ -54,6 +57,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Parser.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Interprete.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
