Modificación completa del sistema operacional. V. 0.7Beta
Se ha modificado el core del lenguaje, centrándonos en el modo de tratamiento de operaciones.
Ahora seguirán un esquema derivado del Shunting Yards, pero con un sistema de cacheado que agrupara y realizará operaciones antes del paso a ByteCode para incrementar la velocidad en tiempo de ejecución.

Con este sistema de operaciones, por los primeros benchmarks, es unas 25-35 veces más rápido que la versión anterior y unas 2 a 3 veces más rapido que el sistema de Python, lógicamente, dependerá del tipo de operaciones realizadas.

--- a/MDOX/MDOX.vcxitems.filters
+++ b/MDOX/MDOX.vcxitems.filters
@@ -4,16 +4,14 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Errores.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)Funciones.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)Parser.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)Tipos.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)Tokenizer.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)Operaciones.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Errores.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)Estructuras.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)Funciones.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)Parser.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)Tipos.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)Tokenizer.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)Core.h" />
   </ItemGroup>
 </Project>
